# AgentRetreive

./: .gitignore  Cargo.toml  Dockerfile.repro  LICENSE  Makefile  PROPOSED_METHOD_COMPLETE.md  README.md  RELEASE_NOTES.md  RIPGREP_INVESTIGATION_REPORT.md  claw.md  give.md  outline.md  plan.md  pyproject.toml  redesign_report.md.resolved  requirements-lock.txt
.github/workflows/: cd-release.yml  ci.yml
configs/: experiment_pipeline.yaml  experiment_profiles.v1.yaml  symbol_extraction_support.v1.json  symbol_language_weights.v1.json
crates/ar-cli/: Cargo.toml
crates/ar-cli/src/: main.rs
crates/ar-core/: Cargo.toml
crates/ar-core/src/: bm25.rs  index.rs  lib.rs  symbol.rs  tokenizer.rs  wal.rs
crates/ar-mcp/: Cargo.toml
docs/: CI_CD.md  NAMESPACE_RESERVATIONS.md  PIPELINE_GUIDE.md  README.md  SSOT.md  WORKTREE.md
docs/benchmarks/: BENCHMARK_DESIGN_V2_L123.md  CORPUS_EXTENSION_PLAN.md  DATASET_BIAS_ANALYSIS.md  DIFFICULTY_FRAMEWORK.md  OPTIMAL_PARAMETER_RATIONALE.md  README.md  TASKSET_DESIGN_V2.md  TASKSET_V2_EVALUATION.md  VALIDITY_SUMMARY.md  baselines.v1.json  corpus.v1.1.json  corpus.v1.json  multilang_analysis.v1.json  multilang_mrr_symbol_correlation.v1.json  results.latest.json  run_constraints.v1.json  run_constraints.v2.json  scale_analysis.v1.json  taskset.v1.fixed.jsonl  taskset.v1.jsonl  taskset.v2.1.jsonl  taskset.v2.full.jsonl  taskset.v2.jsonl
docs/contracts/: IMPLEMENTATION_CONTRACT.md  RESULT_COMPATIBILITY_POLICY.v1.md  contract_policy.v1.json
docs/operations/: AGENTD.md  ASSET_CLASSIFICATION.md  CLI_DISTRIBUTION.md  MAINTENANCE_GOVERNANCE.md  PROGRAM_R1_MIGRATION_GUIDE.md  README.md  RUNBOOK.md  SIER_SOUL.md  SKILLS_OPERATING_MODEL.md
docs/papers/: ARTIFACT_APPENDIX.md  CLAIM_EVIDENCE_MAP.md  FIGURE_SOURCES.v1.json  PAPER_OUTLINE.md  PROPOSED_METHOD.md  RELATED_WORK.md
docs/research/: experiment_findings_v2.md  param_optimization_sprint15.md  r1_core_completion.md  r1_perf_report.md  roadmap.md  sprint_summary_8_14.md
docs/schemas/: README.md  baselines.v1.schema.json  contract_policy.v1.schema.json  corpus.v1.schema.json  daemon_task.v1.schema.json  dataset_manifest.v1.schema.json  experiment_run_record.v1.schema.json  experiment_run_record.v2.schema.json  project_execution_task.v1.entry.schema.json  query.dsl.v1.schema.json  query.dsl.v2.schema.json  result.minijson.v1.schema.json  result.minijson.v2.schema.json  result.minijson.v3.schema.json  run_constraints.v1.schema.json  run_constraints.v2.schema.json  taskset.v1.entry.schema.json
scripts/: README.md
scripts/benchmark/: analyze_toolcall_reduction.py  build_l123_task_views.py  compare_all_tools.py  compare_baselines.py  compare_with_optimal.py  complete_phase3.py  evaluate_taskset.py  export_symbol_support_metrics.py  fit_symbol_language_weights.py  generate_report.py  investigate_ripgrep.py  parameter_search.py  run_all_experiments.py  run_comparison.py  verify_dataset.py
scripts/ci/: run_contract_harness.sh  validate_contracts.py  validate_figure_integrity.py
scripts/daemon/: agentd.py  enqueue_task.py  run_agentd.sh
scripts/dev/: init_project_from_template.py  install_ar_launcher.sh  prepare_worktree.sh  run_cross_env_repro.sh  (+2 more)
skills/: CATALOG.yaml  README.md
tasks/: OPTIMIZATION_SUMMARY.md  ar_runtime_improvement_report_2026-03-03.md  decisions.md  implementation_donts.md  lessons.md  project_execution_plan.v1.jsonl  research_foundation.md  risk_register.md  todo.md  validation_matrix.md
tests/: conftest.py
(+50 files in other folders)
