[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentretrieve"
version = "0.1.0"
description = "Agent-native code search - non-embedding, deterministic retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
ar = "agentretrieve.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
