[package]
name = "ar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "ar"
path = "src/main.rs"

[[bin]]
name = "ar-cli"
path = "src/bin/ar-cli.rs"

[dependencies]
anyhow = "1.0"
ar-core = { path = "../ar-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
