[package]
name = "ar-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
fst = "0.4"
globset = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
